2009-05-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig and Dan Bernstein.

        Fix <rdar://problem/6889644>
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::spawnPluginHost):

2009-05-16  Dan Bernstein  <mitz@apple.com>

        - revert an accidental change from r43802.

        * WebInspector/WebInspector.mm:

2009-05-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6895347> Mouse wheeling in the QuickTime plug-in (incorrectly) scrolls the page
        
        Fix logic. The plug-in returns true if it handled the event.
        
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView sendEvent:isDrawRect:]):

2009-05-16  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        - fix <rdar://problem/6873305> Two distinct characters are not displayed
          correctly with 2 of the font selections from the stickies widget

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _plainTextFromPasteboard:]): Return precomposed text.
        This is consistent with
        -_documentFragmentFromPasteboard:forType:inContext:subresources:.

2009-05-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Fix <rdar://problem/6875398>.
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::instantiatePlugin):
        If we failed to instantiate the plug-in, call cleanup() so that any streams created by the plug-in from its
        NPP_New callback are destroyed.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        Make cleanup() public.

2009-05-15  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/6889823> hash table iterator used after hash table modified in
        ProxyInstance::fieldNamed() when viewing movie trailer
