@@ -1,3 +1,13 @@
+2009-05-18  Steve Falkenburg  <sfalken@apple.com>
+
+        <rdar://problem/6899044> Can't see Apple ad on nytimes.com unless I spoof the user agent
+        
+        Add user agent hack for pointroll.com.
+        
+        Reviewed by Sam Weinig.
+
+        * WebView.cpp:
+
 2009-05-13  Dmitry Titov  <dimich@chromium.org>
 
         Rubber-stamped by Mark Rowe.
